# etheraudit

./: .gitignore  KingOfTheEtherThrone.sol  accounts.js  deploy.js  example-block.json  example-receipt.json  example-txn.json  gatherEntryPoints.js  package.json  readme.md  transactions.js
cpp/: AuditResult.cc  AuditResult.h  CFExpression.cc  CFExpression.h  CFInstruction.cc  CFInstruction.h  CFNode.h  OpCodes.h  Utils.cc  Utils.h
db/contracts/: 0x4915fe33b497f621d8b437ed126a585e7a3cd868bf52534cd8da449d869ad3f2-0x41815948fd64539f213423b2b7e22fcd1aa36c18  0x8434818ea15c4fdf624b152f0fea9a3c0f693e1c999605298d71cc8409da0e2b-0xf5fd27d09593fbc248fd83e30e15ab2e0cfd3243  0xa8b3733cb556f942c8ce9b2fca536e8d364c4535fe7dc0b95151cdd7eaf3a313-0xd90e6f0674b2df67f0ef171c6b963b183424e32f  0xbbfa6b7906865fe14d4a6216546a57b4027d406875fce6d773c438b4b4bc0719-0x61c029e089821313f127f5a97febc6a46eae2da6  0xe3ebb1b0c3df14788c70312bb45605be8fb560cf6c05616f72e93a4f5498805d-0x133d62e41b0d89a8ff8616bffcbb90270ba70284
go/: main.go
go/Parser/: ArgumentExpr.go  ConstantExpr.go  Expression.go  Program.go
rust/etheraudit/: Cargo.toml
rust/etheraudit/src/: block.rs  expression.rs  instruction.rs  instructions.rs  main.rs  memory.rs  op_codes.rs  program.rs
scripts/: grabABIs.sh  readCSV.sh  writeBC.sh
src/: CFInstruction.cc  CFInstruction.h  CFNode.cc  CFNode.h  CFStackEntry.cc  CFStackEntry.h  CMakeLists.txt  OpCodes.cc  OpCodes.h  Program.cc  Program.h  etherdis.cc  opcodes_xx.h
testnet/: deploy.js  genesis.json  package.json  transactions.js
