[package]
name = "etheraudit"
version = "0.1.0"
authors = ["Justin Berger <j.david.berger@gmail.com>"]

[dependencies]
ethcore          = { git = "https://github.com/paritytech/parity" }
evm          = { git = "https://github.com/paritytech/parity" }
ethcore-devtools = { git = "https://github.com/paritytech/parity" }
ethcore-io       = { git = "https://github.com/paritytech/parity" }
ethcore-util     = { git = "https://github.com/paritytech/parity" }
ethkey           = { git = "https://github.com/paritytech/parity" }
lazy_static = "0.2"
arrayvec = "0.3"